--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
+
+:root{
+  --white: #FFFCF2;
+  --gold: #B6984F;
+
+}
+
+html{
+  font-size: 62.5%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   background-color: #212529;
-  color: #C6AD61;
   height: 100vh;
   width: 100vw;
+  font-family: 'Playfair Display', serif;
 }
+
