--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -1,3 +1,6 @@
+// * {
+//     border:red 1px solid;
+// }
 
 .hero-container {
 height: 106.2rem;
@@ -6,14 +9,14 @@ padding: 47.2rem 0 30rem 11.9rem;
 align-items: flex-end;
 justify-content: flex-start;
 background-color: #212529;
-border: 8px solid var(--gold);
 background-image: url('abm-hero.png');
 background-repeat: no-repeat;
 background-size: cover;
+border: 8px solid var(--gold);
 }
 
+
 .book {
-// flex-direction: column;
 display: flex;
 font-family: 'Playfair Display';
 font-weight: 600;
