fixed signature css

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -1,6 +1,6 @@
-* {
-    border:red 1px solid;
-}
+// * {
+//     border:red 1px solid;
+// }
 
 .about-container {
 height: 106.2rem;
@@ -54,5 +54,5 @@ background-size: cover;
 position: absolute;
 width: 400px;
 height: 250px;
-margin: 60% 0 30% 33%;
+margin: 60% 0 36% 30%;
 }
