--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -13,6 +13,7 @@ background-color: #212529;
 border: 8px solid var(--gold);
 }
 
+
 .background-image {
 position: absolute;
 height: 106.2rem;
@@ -60,3 +61,9 @@ height: 60px;
 left: 5px;
 top: 280px;
 }
+
+// div 
+//  {
+//     height: 90px;
+//     background-image: linear-gradient(to bottom right, var(--gold));
+//  }
