Created and styled the diagonal section dividers

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -1,8 +1,9 @@
 .about-section {
   border: 8px solid var(--gold);
+  border-top: none;
   height: 131.6rem;
   background-color: #3a3c46;
-  padding: 24.7rem 12rem;
+  padding: 30.8rem 0 24.7rem 12rem;
 }
 
 .about-container {
