--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -2,8 +2,9 @@
   background-image: url("abm-hero.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 106.2rem;
   border: 8px solid var(--gold);
+  border-bottom: none;
+  height: 106.2rem;
 }
 
 .hero-container {
@@ -12,7 +13,7 @@
   grid-template-rows: 1fr 0.5fr 1fr;
   column-gap: 2.4rem;
   row-gap: 0;
-  padding: 0 13rem;
+  padding-left: 13rem;
 }
 
 .overlay {
