--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -1,9 +1,8 @@
 .about-section {
   border: 8px solid var(--gold);
-  border-top: none;
   height: 131.6rem;
   background-color: #3a3c46;
-  padding: 30.8rem 0 24.7rem 12rem;
+  padding: 24.7rem 12rem;
 }
 
 .about-container {
@@ -20,6 +19,7 @@
   height: 80rem;
   align-items: flex-start;
   margin-bottom: 15%;
+}
 
 // Textbox
 
@@ -44,35 +44,4 @@
 .signature {
   width: 50%;
   margin: -1rem 0 0 -8rem;
-}
-
-
-.text {
-display: flex;
-flex-direction: column;
-text-align: start;
-position: absolute;
-width: 623px;
-height: 711px;
-font-weight: 500;
-font-size: 19px;
-line-height: 40px;
-z-index: 1;
-color: var(--white); 
-margin-left: 39%;
-margin-bottom: 20%;
-}
-
-// Signature 
-
-.sign {
-display: flex;
-flex-direction: column;
-background-image: url(./sign.png);
-background-repeat: no-repeat;
-background-size: cover;
-position: absolute;
-width: 400px;
-height: 250px;
-margin: 60% 0 36% 30%;
 }
