--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -18,19 +18,55 @@ font-size: 28px;
 text-transform: uppercase;
 }
 
+.headline {
+padding-top: 3.2rem;
+align-items: left;
+color: #FFFCF2;
+}
+
 h2 {
-font-family: 'Playfair Display';
-font-style: normal;
 font-weight: 700;
 font-size: 48px;
-line-height: 60px;
+// line-height: 60px;
 text-transform: capitalize;
-color: #FFFCF2;
 }
   
 .subtitle {
-font-weight: 400;
-font-size: 3.3rem;
-color: var(--white);
-text-transform: capitalize;
+padding-top: .3rem;
+align-items: left;
+color: #FFFCF2;
+padding-top: rem;
 }
+
+
+subheading {
+font-weight: 400;
+font-size: 33px;
+color: #FFFCF2;
+}
+
+// Gallery
+.parent {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 16px;
+    grid-row-gap: 14px;
+    }
+    
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 1 / 3 / 4 / 4; }
+    .div4 { grid-area: 1 / 4 / 2 / 5; }
+    .div5 { grid-area: 2 / 1 / 4 / 3; }
+    .div6 { grid-area: 2 / 4 / 4 / 5; }
+    .div7 { grid-area: 4 / 1 / 5 / 2; }
+    .div8 { grid-area: 4 / 2 / 5 / 3; }
+    .div9 { grid-area: 4 / 3 / 5 / 4; }
+    .div10 { grid-area: 4 / 4 / 5 / 5; }
+    .div11 { grid-area: 5 / 1 / 7 / 2; }
+    .div12 { grid-area: 5 / 2 / 6 / 3; }
+    .div13 { grid-area: 5 / 3 / 6 / 4; }
+    .div14 { grid-area: 5 / 4 / 6 / 5; }
+    .div15 { grid-area: 6 / 2 / 7 / 3; }
+    .div16 { grid-area: 6 / 3 / 7 / 5; }
