--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -43,8 +43,9 @@ font-size: 3.3rem;
     grid-template-rows: repeat(5, 1fr);
     gap: 2.4rem;
     width: 118rem;
-    height: 117.3rem;
+    height: 200rem;
 }
+
     .look-img img{
         width: 100%;
         height: 100%;
@@ -128,6 +129,7 @@ font-size: 3.3rem;
      }
 
     .div16 { 
-    grid-column: 3 / span 2; 
+    // grid-column: 3 / span 2; 
     grid-row: 5;
     }
+
