--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -129,7 +129,7 @@ font-size: 3.3rem;
      }
 
     .div16 { 
-    // grid-column: 3 / span 2; 
+    grid-column: 3 / span 2; 
     grid-row: 5;
     }
 
