--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -48,7 +48,9 @@ font-size: 3.3rem;
         height: 100%;
         display: block;
         object-fit: cover;
+        border: 2px solid #FFFCF2;
     }
+
 
     .div1 { 
     grid-column: 1 / 2;
