--- a/src/Views/SfxPage/SfxPage.scss
+++ b/src/Views/SfxPage/SfxPage.scss
@@ -121,14 +121,14 @@
         grid-row: 4 / 5;
         }
     
-        // .div15 {
-        // grid-column: 2 / 3;
-        // grid-row: 5;
-        //  }
+        .div15 {
+        grid-column: 2 / 3;
+        grid-row: 5;
+         }
     
-        // .div16 { 
-        // grid-column: 3 / span 2; 
-        // grid-row: 5;
-        // }
+        .div16 { 
+        grid-column: 3 / span 2; 
+        grid-row: 5;
+        }
     
     
