--- a/src/Views/TheatrePage/TheatrePage.scss
+++ b/src/Views/TheatrePage/TheatrePage.scss
@@ -47,7 +47,7 @@ font-size:3.3rem;
         height: 100%;
         display: block;
         object-fit: cover;
-        border: 2px solid #FFFCF2;
+        border: 2px solid rgba(182, 152, 79, 1);
     }
 
 
@@ -101,32 +101,4 @@ font-size:3.3rem;
     grid-row: 3 / 4;
     }
 
-    .div11 { 
-    grid-column: 1 / 2; 
-    grid-row: 4 / span 2;
-     }
-
-    .div12 {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5; 
-    }
-
-    .div13 { 
-    grid-column: 3 / 4;
-    grid-row: 4 / 5;
-    }
-
-    .div14 { 
-    grid-column: 4 / 5;
-    grid-row: 4 / 5;
-    }
-
-    .div15 {
-    grid-column: 2 / 3;
-    grid-row: 5;
-     }
-
-    .div16 { 
-    grid-column: 3 / span 2; 
-    grid-row: 5;
-    }
+ 
