--- a/src/Views/TheatrePage/TheatrePage.scss
+++ b/src/Views/TheatrePage/TheatrePage.scss
@@ -42,7 +42,7 @@ font-size:3.3rem;
     height: 200rem;
 }
 
-    .look-img img{
+    .TP-img img{
         width: 100%;
         height: 100%;
         display: block;
