--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -5,10 +5,16 @@
 }
 
 .testimonials-section {
+  height: 100vh;
+  padding: 50px;
+  margin: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  // justify-content: center;
+  flex-direction: column;
+  // position: relative;
+
 
   .titleBlurb {
     font-family: 'Playfair Display';
@@ -16,8 +22,10 @@
     text-align: center;
     color: #FFFCF2;
     font-style: normal;
-    padding-bottom: 50px;
-    position: absolute;
+    // padding-bottom: 50px;
+    height: 30px;
+    // width: 45%;
+    // top: 10%;
 
     p {
       font-weight: 700;
@@ -39,9 +47,23 @@
       line-height: 50px;
     }
   }
+  .arrow {
+    height: 50px;
+    position: absolute;
 
+    &.left {
+      left: 100px;
+      cursor: pointer;
+    }
+
+    &.right {
+      right: 100px;
+      cursor: pointer;
+    }
+  }
   .slider {
-    height: 450px;
+    // height: 450px;
+    // width: 876px;
     display: flex;
     position: absolute;
     left: 0;
@@ -53,33 +75,52 @@
       justify-content: center;
       color: #FFFCF2;
       // padding: 100px;
+      width: 100vw;
 
       .testimonial {
-        width: 800px;
+        // width: 800px;
         height: 100%;
-        border-radius: 20px;
+        // border-radius: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
 
         .left {
-          height: 100%;
+          // height: 100%;
           display: flex;
           align-items: center;
           justify-content: center;
           // flex: 6;
-          flex-direction: column;
+          // flex-direction: column;
+// NOT NECESSARY ? 
+          .leftContainer {
+            // width: 90%;
+            // height: 90%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding-left: 20px;
+          }
+
+          h1 {
+            font-size: 50px;
+          }
         }
 
         .right {
           // flex: 3;
-          height: 100%;
+          // height: 100%;
           display: flex;
           justify-content: center;
           align-items: center;
           padding-right: 20px;
 
-          img {}
+          img {
+            // width: 475px;
+            // height: 300px;
+            // border-radius: 5px;
+
+          }
         }
       }
     }
