--- a/src/Components/ServicesSection/ServicesSection.scss
+++ b/src/Components/ServicesSection/ServicesSection.scss
@@ -3,53 +3,68 @@
 // * {
 //   border: pink 1px solid;
 // }
-.servicesContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px;
 
-  .copy {
-    font-family: 'Playfair Display';
-    width:876px;
-    text-align: center;
-    color: #FFFCF2;
-    font-style: normal;
-    padding-bottom: 50px;
-    
-    p {
-      font-weight: 700;
-      font-size: 28px;
-      line-height: 55px;
-      text-transform: uppercase;
-      color: #686C7E;
-    }
+.services-section {
+  padding: 200px;
+  padding-top: 0px;
 
-    h2 {
-      font-weight: 700;
-      font-size: 48px;
-      line-height: 60px;
-    }
-
-    h3 {
-      font-weight: 400;
-      font-size: 33px;
-      line-height: 50px;
-    }
-
-
-  }
-
-  .cardHolder {
+  .servicesContainer {
     display: flex;
-    justify-content: space-between;
-    margin: 20px;
-    width: 73vw;
-    height: 492px;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
     
-    .cards {
-      background-color: white;
+    .copy {
+      font-family: 'Playfair Display';
+      width:876px;
       text-align: center;
+      color: #FFFCF2;
+      font-style: normal;
+      padding: 50px;
+      padding-bottom: 100px;
+      
+      p {
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 55px;
+        text-transform: uppercase;
+        color: #686C7E;
+        padding-bottom: 25px;
+      }
+      
+      h2 {
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 60px;
+      }
+      
+      h3 {
+        font-weight: 400;
+        font-size: 33px;
+        line-height: 50px;
+      }
+    }
+    
+    .cardHolder {
+      display: flex;
+      justify-content: space-between;
+      margin: 20px;
+      width: 72vw;
+      height: 475px;
+      
+      .cards {
+        background-color: white;
+        text-align: center;
+
+        p {
+          color: black;
+          font-size: 30px;
+          font-family: 'Playfair Display';
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
     }
   }
 }
