cleaning up code and closer to final styling for testimonials section

--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -1,4 +1,7 @@
-// .homePage {
-//   width: 100%;
-//   position: relative ;
-// }
+.homePage {
+  width: 100%;
+  position: relative ;
+  // overflow-x: none;
+
+
+}
