--- a/src/App.scss
+++ b/src/App.scss
@@ -19,12 +19,18 @@ html {
 body {
   background-color: var(--bg-color);
   font-family: "Playfair Display", serif;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .App {
   height: 100vh;
   width: 100vw;
   overflow: none;
+  overflow-x: hidden;
+  // overflow-y: hidden;
+  // overflow-y:scroll;
+
 }
 
 .section-divider {
