--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;300&family=Playfair+Display&display=swap');
 
 * {
-  border: gold 1px solid;
+  // border: gold 1px solid;
 }
 
 .testimonials-section {
-  height: 100vh;
-  padding: 50px;
+  height: 1000px;
+  padding: 100px;
   margin: 100px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   // justify-content: center;
   flex-direction: column;
-  // position: relative;
+  position: relative;
+  // width: 60vw;
 
 
   .titleBlurb {
@@ -24,8 +24,11 @@
     font-style: normal;
     // padding-bottom: 50px;
     height: 30px;
-    // width: 45%;
-    // top: 10%;
+    width: 60vw;
+    position: absolute;
+    top: -100px;
+    // padding: 50px;
+    padding-bottom: 100px;
 
     p {
       font-weight: 700;
@@ -33,6 +36,7 @@
       line-height: 55px;
       text-transform: uppercase;
       color: #686C7E;
+      padding-bottom: 25px;
     }
 
     h2 {
@@ -47,110 +51,101 @@
       line-height: 50px;
     }
   }
-  .arrow {
-    height: 50px;
+
+  .border {
+    border-bottom: white 8px solid;
+    width: 40%;
+    height: 0px;
     position: absolute;
-
-    &.left {
-      left: 100px;
-      cursor: pointer;
-    }
-
-    &.right {
-      right: 100px;
-      cursor: pointer;
-    }
+    top: 23.5rem;
+    left: 1.4rem;
   }
+  
   .slider {
     // height: 450px;
-    // width: 876px;
+    // width: 90vw;
     display: flex;
     position: absolute;
-    left: 0;
+    bottom: 50px;
+    left: -70px;
     transition: all 1s ease-out;
-
+    
     .testimonialContainer {
       display: flex;
       align-items: center;
       justify-content: center;
       color: #FFFCF2;
-      // padding: 100px;
       width: 100vw;
-
+      
       .testimonial {
-        // width: 800px;
-        height: 100%;
-        // border-radius: 20px;
+        border-left: white 8px solid;
+        border-bottom: white 8px solid;
+        width: 90vw;
         display: flex;
         align-items: center;
-        justify-content: center;
-
-        .left {
-          // height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          // flex: 6;
-          // flex-direction: column;
-// NOT NECESSARY ? 
-          .leftContainer {
-            // width: 90%;
-            // height: 90%;
+        justify-content: space-between;
+          
+          .left {
             display: flex;
+            padding: 8rem 0 4.8rem 6.4rem;
+            width: 500px;
+            height: 700px;
             flex-direction: column;
             justify-content: space-between;
-            padding-left: 20px;
-          }
+            text-align: left;
+            flex-wrap: wrap;
 
           h1 {
             font-size: 50px;
+            width: 500px;
+            position: relative;
+            padding-top: 20px;
+          }
+          
+          h1::after {
+            content: '';
+            display: block;
+            position: absolute;
+            bottom: -20px;
+            width: 60%;
+            border-bottom: 4px solid white;
+          }
+
+          h3 {
+            // width: 200px;
+            font-size: 25px;
+          }
+
+          .arrows {
+            height: 100px;
+            width: 100px;
+            display: flex;
+            justify-content: space-between;
+
+            .arrow {
+              height: 50px;
+              height: 25px;
+              width: 25px;
+
+              &.left {
+                left: 100px;
+                cursor: pointer;
+              }
+
+              &.right {
+                right: 100px;
+                cursor: pointer;
+              }
+            }
           }
         }
 
-        .right {
-          // flex: 3;
-          // height: 100%;
+        .rightContainer {
           display: flex;
           justify-content: center;
           align-items: center;
-          padding-right: 20px;
-
-          img {
-            // width: 475px;
-            // height: 300px;
-            // border-radius: 5px;
-
-          }
         }
       }
     }
-
-    // .border {
-    //   display: flex;
-    //   // border: 5px solid blue;
-
-    // }
-
-    // .testimonialsCopy {
-    //   display: flex;
-    //   flex-direction: column;
-    //   justify-content: space-between;
-
-    //   h1 {
-    //     font-weight: 700;
-    //     font-size: 40px;
-    //     padding-bottom: 50px;
-    //   }
-
-    //   p {
-    //     font-size: 28px;
-    //   }
-    // }
-
-    // .sliderContainer {
-    //   display: flex;
-
-    // }
   }
-
 }
