--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -35,7 +35,7 @@ nav ul {
   border-bottom: 3px solid var(--white);
 }
 
-.nav-link a,
+.nav-link h2, .link,
 .border {
   color: var(--white);
   font-size: 2.3rem;
