trying out calendly. need to figure out if i can change styling further.

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,13 +22,14 @@ body {
   font-family: "Playfair Display", serif;
   overflow-x: hidden;
   overflow-y: hidden;
+  overflow: scroll;
 }
 
 .App {
   height: 100vh;
   width: 100vw;
-  overflow: none;
-  overflow-x: hidden;
+  // overflow: none;
+  // overflow-x: hidden;
   // overflow-y: hidden;
   // overflow-y:scroll;
 
