Began building and styling the art page

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,11 @@
 :root {
   --white: #fffcf2;
   --gold: #b6984f;
+  --cyan: #3bc9db;
   --bg-color: #212529;
   --bg-light: #3a3c46;
+  --bg-lightest: #686c7e;
+  --desktop-margin: 13rem;
 }
 
 html {
@@ -26,4 +29,3 @@ body {
   height: 100vh;
   width: 100vw;
 }
-
