Fixed styling errors in the services section and styled the testimonial section

--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -24,7 +24,7 @@
   height: 104.6rem;
 }
 
-.headline {
+.heading {
   display: flex;
   flex-direction: column;
   //   margin: 25% 10% 25% 10%;
@@ -39,7 +39,7 @@ h1 {
   color: var(--white);
 }
 
-.subtitle {
+.subheading {
   font-weight: 400;
   font-size: 3.3rem;
   color: var(--white);
