--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -1,151 +1,155 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;300&family=Playfair+Display&display=swap');
-
-* {
-  // border: gold 1px solid;
-}
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@700&display=swap");
 
 .testimonials-section {
-  height: 1000px;
-  padding: 100px;
-  margin: 100px;
   display: flex;
-  align-items: center;
-  // justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+.heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonial-container {
+  margin-top: 20.8em;
+}
+
+.testimonial {
+  display: grid;
+  grid-template-columns: 0.55fr 0.45fr;
+  gap: 8.8em;
+  color: var(--white);
+  width: 117.6em;
+  height: 70em;
+  border: 8px solid var(--bg-lightest);
+  border-right: none;
+}
+
+.testimonial-author {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.testimonial-text {
+  font-size: 2.8rem;
+  line-height: 154%;
+  text-align: left;
+  padding-left: 1.2em;
+}
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  gap: 8.8em;
+}
+
+.text-side {
+  display: flex;
+  flex-direction: column;
+  gap: 13em;
+  justify-content: space-between;
+  width: 59em;
+  align-items: flex-start;
+  padding: 8em 0 0 6.4em;
+}
+
+.img-side {
+  display: flex;
+  align-items: start;
+  justify-content: end;
+}
+
+.testimonial-img {
+  display: block;
+}
+
+.slide-controls {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.4em;
   position: relative;
-  // width: 60vw;
+  top: -2.8em;
+  left: -2em;
+}
 
+.slidenumber {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.8em;
+  margin-top: -1.2em;
+}
 
-  .titleBlurb {
-    font-family: 'Playfair Display';
-    width: 876px;
-    text-align: center;
-    color: #FFFCF2;
-    font-style: normal;
-    // padding-bottom: 50px;
-    height: 30px;
-    width: 60vw;
-    position: absolute;
-    top: -100px;
-    // padding: 50px;
-    padding-bottom: 100px;
+svg {
+  width: 5.6em;
+  height: 5.6em;
+}
 
-    p {
-      font-weight: 700;
-      font-size: 28px;
-      line-height: 55px;
-      text-transform: uppercase;
-      color: #686C7E;
-      padding-bottom: 25px;
-    }
+.next-arrow {
+  fill: var(--white);
+}
 
-    h2 {
-      font-weight: 700;
-      font-size: 48px;
-      line-height: 60px;
-    }
+.prev-arrow {
+  fill: var(--bg-lightest);
+}
 
-    h3 {
-      font-weight: 400;
-      font-size: 33px;
-      line-height: 50px;
-    }
-  }
+.slide-number {
+  color: var(--white);
+  display: block;
+  margin-top: -1.5rem;
+}
 
-  .border {
-    border-bottom: white 8px solid;
-    width: 40%;
-    height: 0px;
-    position: absolute;
-    top: 23.5rem;
-    left: 1.4rem;
-  }
-  
-  .slider {
-    // height: 450px;
-    // width: 90vw;
-    display: flex;
-    position: absolute;
-    bottom: 50px;
-    left: -70px;
-    transition: all 1s ease-out;
-    
-    .testimonialContainer {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #FFFCF2;
-      width: 100vw;
-      
-      .testimonial {
-        border-left: white 8px solid;
-        border-bottom: white 8px solid;
-        width: 90vw;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-          
-          .left {
-            display: flex;
-            padding: 8rem 0 4.8rem 6.4rem;
-            width: 500px;
-            height: 700px;
-            flex-direction: column;
-            justify-content: space-between;
-            text-align: left;
-            flex-wrap: wrap;
+.current-pg,
+.total-pgs {
+  font-size: 3.3rem;
+}
 
-          h1 {
-            font-size: 50px;
-            width: 500px;
-            position: relative;
-            padding-top: 20px;
-          }
-          
-          h1::after {
-            content: '';
-            display: block;
-            position: absolute;
-            bottom: -20px;
-            width: 60%;
-            border-bottom: 4px solid white;
-          }
+// .slider {
+//   display: flex;
+// }
 
-          h3 {
-            // width: 200px;
-            font-size: 25px;
-          }
+.underline {
+  height: 0;
+  border-top: 4px solid var(--white);
+  margin-top: 2.4rem;
+}
 
-          .arrows {
-            height: 100px;
-            width: 100px;
-            display: flex;
-            justify-content: space-between;
+.left-par,
+.right-par {
+  font-family: "Catamaran", sans-serif;
+  color: var(--white);
+  font-size: 6.9rem;
+  font-weight: bold;
+  position: absolute;
+}
 
-            .arrow {
-              height: 50px;
-              height: 25px;
-              width: 25px;
+.left-par {
+  top: 5.7em;
+  left: 1em;
+  transform: rotate(180deg);
+}
 
-              &.left {
-                left: 100px;
-                cursor: pointer;
-              }
+.right-par {
+  top: 9.9em;
+  left: 7.5em;
+}
 
-              &.right {
-                right: 100px;
-                cursor: pointer;
-              }
-            }
-          }
-        }
+.current-pg {
+  color: var(--bg-lightest);
+}
 
-        .rightContainer {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-      }
-    }
-  }
+.border-breaker {
+  width: 70.2em;
+  height: 1.6em;
+  background-color: var(--bg-color);
+  position: absolute;
+  top: 286em;
+  left: 60em;
+  z-index: 5;
 }
