--- a/src/Views/ArtPage/ArtPage.scss
+++ b/src/Views/ArtPage/ArtPage.scss
@@ -23,42 +23,42 @@
   line-height: 3.2rem;
 }
 
-.Art h4 {
-  color: var(--bg-lightest);
-  font-size: 2.8rem;
-  line-height: 5.5rem;
-  margin: 20.8rem 0 3.2rem 0;
-  text-transform: uppercase;
-}
+// .Art h4 {
+//   color: var(--bg-lightest);
+//   font-size: 2.8rem;
+//   line-height: 5.5rem;
+//   margin: 20.8rem 0 3.2rem 0;
+//   text-transform: uppercase;
+// }
 
-.Art h2 {
-  font-size: 4.8rem;
-  line-height: 6rem;
-  margin-bottom: 1.6rem;
-}
+// .Art h2 {
+//   font-size: 4.8rem;
+//   line-height: 6rem;
+//   margin-bottom: 1.6rem;
+// }
 
-.Art h3 {
-  font-size: 3.3rem;
-  margin-bottom: 10.4rem;
-  text-transform: none;
-  font-weight: 400;
-}
+// .Art h3 {
+//   font-size: 3.3rem;
+//   margin-bottom: 10.4rem;
+//   text-transform: none;
+//   font-weight: 400;
+// }
 
-.Art h4,
-.Art h2 {
-  font-weight: 700;
-}
+// .Art h4,
+// .Art h2 {
+//   font-weight: 700;
+// }
 
-.Art h2,
-.Art h3 {
-  color: var(--white);
-}
+// .Art h2,
+// .Art h3 {
+//   color: var(--white);
+// }
 
-.Art h4,
-.Art h3,
-.Art h2 {
-  text-align: left;
-}
+// .Art h4,
+// .Art h3,
+// .Art h2 {
+//   text-align: left;
+// }
 
 .Art .art-gallery {
   display: grid;
