--- a/src/Views/MakeupPage/MakeupPage.scss
+++ b/src/Views/MakeupPage/MakeupPage.scss
@@ -1,134 +1,101 @@
-
 .makeup-container {
-padding: 35rem 13rem 0;
-}
-
-.section-title {
-align-items: center;
-color: #686C7E;
-}
-
-h3 {
-font-weight: 700;
-font-size: 28px;
-text-transform: uppercase;
-}
-
-.headline {
-padding-top: 3.2rem;
-align-items: left;
-color: #FFFCF2;
-}
-
-h2 {
-font-weight: 700;
-font-size: 48px;
-text-transform: capitalize;
-}
-  
-.subtitle {
-padding-top: .3rem;
-color: #FFFCF2;
-font-weight: 400;
-font-size: 3.3rem;
+  padding: 35rem 13rem 0;
 }
 
 .gallery {
-    margin: 10.4rem 0 24.7rem 0;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 2.4rem;
-    width: 118rem;
-    height: 200rem;
+  margin: 10.4rem 0 24.7rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 2.4rem;
+  width: 118rem;
+  height: 200rem;
 }
 
-    .look-img img{
-        width: 100%;
-        height: 100%;
-        display: block;
-        object-fit: cover;
-        border: 2px solid #FFFCF2;
-    }
+.look-img img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+  border: 2px solid #fffcf2;
+}
 
+.div1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
 
-    .div1 { 
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-     }
+.div2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
 
-    .div2 { 
-    grid-column: 2 / 3;
-    grid-row: 1 / 2; 
-    }
+.div3 {
+  grid-column: 3 / 4;
+  grid-row: 1 / span 2;
+}
 
-    .div3 { 
-    grid-column: 3 / 4;
-    grid-row: 1 / span 2; 
-    }
+.div4 {
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+}
 
-    .div4 { 
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
-    }
+.div5 {
+  grid-column: 1 / span 2;
+  grid-row: 2 / 3;
+}
 
-    .div5 {
-    grid-column: 1 / span 2;
-    grid-row: 2 / 3; 
-    }
+.div6 {
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+}
 
-    .div6 { 
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
-     }
+.div7 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
 
-    .div7 { 
-    grid-column: 1 / 2;
-    grid-row: 3 / 4; 
-    }
+.div8 {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
 
-    .div8 { 
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-     }
+.div9 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
 
-    .div9 { 
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
-     }
+.div10 {
+  grid-column: 4 / 5;
+  grid-row: 3 / 4;
+}
 
-    .div10 { 
-    grid-column: 4 / 5; 
-    grid-row: 3 / 4;
-    }
+.div11 {
+  grid-column: 1 / 2;
+  grid-row: 4 / span 2;
+}
 
-    .div11 { 
-    grid-column: 1 / 2; 
-    grid-row: 4 / span 2;
-     }
+.div12 {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+}
 
-    .div12 {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5; 
-    }
+.div13 {
+  grid-column: 3 / 4;
+  grid-row: 4 / 5;
+}
 
-    .div13 { 
-    grid-column: 3 / 4;
-    grid-row: 4 / 5;
-    }
+.div14 {
+  grid-column: 4 / 5;
+  grid-row: 4 / 5;
+}
 
-    .div14 { 
-    grid-column: 4 / 5;
-    grid-row: 4 / 5;
-    }
+.div15 {
+  grid-column: 2 / 3;
+  grid-row: 5;
+}
 
-    .div15 {
-    grid-column: 2 / 3;
-    grid-row: 5;
-     }
-
-    .div16 { 
-    grid-column: 3 / span 2; 
-    grid-row: 5;
-    }
-
+.div16 {
+  grid-column: 3 / span 2;
+  grid-row: 5;
+}
