--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
   --bg-light: #3a3c46;
   --bg-lightest: #686c7e;
   --desktop-margin: 13rem;
+  --transition: all 150ms ease-in-out;
 }
 
 html {
@@ -18,6 +19,11 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+*:focus {
+  box-shadow: 0 0 0 0.3rem rgba(182, 152, 79, 0.4);
+  outline: none;
 }
 
 body {
@@ -45,7 +51,7 @@ body {
 }
 
 .headline {
-  margin: 3.2rem -5rem 1.6rem;
+  margin: 3.2rem 0 1.6rem;
   color: var(--white);
   font-weight: 700;
   font-size: 4.8rem;
