--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,14 +1,9 @@
-.header {
-  position: absolute;
-  z-index: 2;
-  width: 100vw;
-}
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 11.9rem 0 9.1rem;
+  width: 100vw;
 }
 
 nav ul {
@@ -35,7 +30,8 @@ nav ul {
   border-bottom: 3px solid var(--white);
 }
 
-.nav-link h2, .link,
+.nav-link h2,
+.link,
 .border {
   color: var(--white);
   font-size: 2.3rem;
