--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -24,7 +24,7 @@
   height: 104.6rem;
 }
 
-.heading {
+.hero-heading {
   display: flex;
   flex-direction: column;
   //   margin: 25% 10% 25% 10%;
