--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -19,6 +19,12 @@
 ._Y8HCTxgNkwxXcG_DCXx {
   margin-top: 0;
 }
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
 .calendar {
   z-index: 1;
   // display: block;
@@ -32,7 +38,7 @@
   }
 }
 .background {
-  background-color: gold;
+  // background-color: gold;
   position: fixed;
   height: 100vh;
   width: 100vw;
