--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -1,4 +1,3 @@
-
 .about-section {
   border: 8px solid var(--gold);
   height: 131.6rem;
@@ -20,6 +19,7 @@
   height: 80rem;
   align-items: flex-start;
   margin-bottom: 15%;
+  object-fit: cover;
 }
 
 // Textbox
