--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   --white: #fffcf2;
   --gold: #b6984f;
   --cyan: #3bc9db;
+  --red: #970c0c;
   --bg-color: #212529;
   --bg-light: #3a3c46;
   --bg-lightest: #686c7e;
