--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -7,7 +7,7 @@
   margin-top: 10.4rem;
 }
 
-img:not(.logo, .footer-logo) {
+.gallery-container img {
   width: 28rem;
   height: 25rem;
   object-fit: cover;
@@ -17,11 +17,17 @@ img:not(.logo, .footer-logo) {
 
 .third-img {
   grid-area: 1 / 3 / 3 / 4;
+}
+
+.sfx-third {
   object-position: -13.5rem center;
 }
 
 .fifth-img {
   grid-area: 2 / 1 / 3 / 3;
+}
+
+.sfx-fifth {
   object-position: center -21rem;
 }
 
@@ -35,6 +41,9 @@ img:not(.logo, .footer-logo) {
 
 .sixteenth-img {
   grid-area: 5 / 3 / 6 / 5;
+}
+
+.sfx-sixteenth {
   object-position: center -12rem;
 }
 
