Optimized the performance of the makeup, SFX, and bridal pages and the efficiency of the Gallery component

--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -20,7 +20,7 @@
   position: absolute;
   background-color: var(--bg-color);
   opacity: 80%;
-  width: 100%;
+  width: 97.9vw;
   height: 104.6rem;
 }
 
