--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -6,150 +6,154 @@
   justify-content: center;
   align-items: center;
   overflow-x: hidden;
-}
-
-.testimonial-container {
-  margin-top: 20.8em;
-}
-
-.heading {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.testimonial {
-  display: grid;
-  grid-template-columns: 0.55fr 0.45fr;
-  gap: 8.8em;
-  color: var(--white);
-  width: 117.6em;
-  height: 70em;
-  border: 8px solid var(--bg-lightest);
-  border-right: none;
-}
-
-.testimonial-author {
-  font-size: 4rem;
-  font-weight: 700;
-}
-
-.testimonial-text {
-  font-size: 2.8rem;
-  line-height: 154%;
-  text-align: left;
-  padding-left: 1.2em;
-}
-
-.quote {
-  display: flex;
-  flex-direction: column;
-  gap: 8.8em;
-}
-
-.text-side {
-  display: flex;
-  flex-direction: column;
-  gap: 13em;
-  justify-content: space-between;
-  width: 59em;
-  align-items: flex-start;
-  padding: 8em 0 0 6.4em;
-}
-
-.img-side {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-end;
-}
-
-.testimonial-img {
-  display: block;
-}
-
-.slide-controls {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 0.4em;
   position: relative;
-  top: -2.8em;
-  left: -2em;
-}
 
-.slidenumber {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 0.8em;
-  margin-top: -1.2em;
-}
+  .slider {
+    display: flex;
+    position: absolute;
+    left: 0;
+    transition: all 1s ease-out;
+  }
 
-svg {
-  width: 5.6em;
-  height: 5.6em;
-}
+  .testimonial-container {
+    margin-top: 20.8em;
+  }
 
-.next-arrow {
-  fill: var(--white);
-}
+  .heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-.prev-arrow {
-  fill: var(--bg-lightest);
-}
+  .testimonial {
+    display: grid;
+    grid-template-columns: 0.55fr 0.45fr;
+    gap: 8.8em;
+    color: var(--white);
+    width: 117.6em;
+    height: 70em;
+    border: 8px solid var(--bg-lightest);
+    border-right: none;
+  }
 
-.slide-number {
-  color: var(--white);
-  display: block;
-  margin-top: -1.5rem;
-}
+  .testimonial-author {
+    font-size: 4rem;
+    font-weight: 700;
+  }
 
-.current-pg,
-.total-pgs {
-  font-size: 3.3rem;
-}
+  .testimonial-text {
+    font-size: 2.8rem;
+    line-height: 154%;
+    text-align: left;
+    padding-left: 1.2em;
+  }
 
-// .slider {
-//   display: flex;
-// }
+  .quote {
+    display: flex;
+    flex-direction: column;
+    gap: 8.8em;
+  }
 
-.underline {
-  height: 0;
-  border-top: 4px solid var(--white);
-  margin-top: 2.4rem;
-}
+  .text-side {
+    display: flex;
+    flex-direction: column;
+    gap: 13em;
+    justify-content: space-between;
+    width: 59em;
+    align-items: flex-start;
+    padding: 8em 0 0 6.4em;
+  }
 
-.left-par,
-.right-par {
-  font-family: "Catamaran", sans-serif;
-  color: var(--white);
-  font-size: 6.9rem;
-  font-weight: bold;
-  position: absolute;
-}
+  .img-side {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+  }
 
-.left-par {
-  top: 5.7em;
-  left: 1em;
-  transform: rotate(180deg);
-}
+  .testimonial-img {
+    display: block;
+  }
 
-.right-par {
-  top: 9.9em;
-  left: 7.5em;
-}
+  .slide-controls {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 0.4em;
+    position: relative;
+    top: -2.8em;
+    left: -2em;
+  }
 
-.current-pg {
-  color: var(--bg-lightest);
-}
+  .slidenumber {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.8em;
+    margin-top: -1.2em;
+  }
 
-.border-breaker {
-  width: 70.2em;
-  height: 1.6em;
-  background-color: var(--bg-color);
-  position: absolute;
-  top: 286em;
-  left: 60em;
-  z-index: 5;
+  svg {
+    width: 5.6em;
+    height: 5.6em;
+  }
+
+  .next-arrow {
+    fill: var(--white);
+  }
+
+  .prev-arrow {
+    fill: var(--bg-lightest);
+  }
+
+  .slide-number {
+    color: var(--white);
+    display: block;
+    margin-top: -1.5rem;
+  }
+
+  .current-pg,
+  .total-pgs {
+    font-size: 3.3rem;
+  }
+
+  .underline {
+    height: 0;
+    border-top: 4px solid var(--white);
+    margin-top: 2.4rem;
+  }
+
+  .left-par,
+  .right-par {
+    font-family: "Catamaran", sans-serif;
+    color: var(--white);
+    font-size: 6.9rem;
+    font-weight: bold;
+    position: absolute;
+  }
+
+  .left-par {
+    top: 5.7em;
+    left: 1em;
+    transform: rotate(180deg);
+  }
+
+  .right-par {
+    top: 9.9em;
+    left: 7.5em;
+  }
+
+  .current-pg {
+    color: var(--bg-lightest);
+  }
+
+  .border-breaker {
+    width: 70.2em;
+    height: 1.6em;
+    background-color: var(--bg-color);
+    position: absolute;
+    top: 286em;
+    left: 60em;
+    z-index: 5;
+  }
 }
