schedule page complete

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@ html {
 }
 
 *:focus {
-  box-shadow: 0 0 0 0.3rem rgba(182, 152, 79, 0.4);
+  box-shadow: 0 0 0 0.3rem #b6984f66;
   outline: none;
 }
 
