Improved the design of the hero section for better responsiveness

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -48,6 +48,7 @@ footer ion-icon:active {
   gap: 20rem;
   margin-top: 6.4rem;
   align-items: flex-start;
+  justify-content: center;
 }
 
 .col-heading {
