--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -1,5 +1,6 @@
 .hero-section {
-  background-image: url("abm-hero.png");
+  background: url(abm-hero.png), rgba(33, 37, 41, 0.8);
+  background-blend-mode: multiply;
   background-repeat: no-repeat;
   background-size: cover;
   border: 8px solid var(--gold);
@@ -14,14 +15,6 @@
   column-gap: 2.4rem;
   row-gap: 0;
   padding-left: 13rem;
-}
-
-.overlay {
-  position: absolute;
-  background-color: var(--bg-color);
-  opacity: 80%;
-  width: 97.9vw;
-  height: 104.6rem;
 }
 
 .hero-heading {
@@ -46,7 +39,8 @@ h1 {
   text-transform: capitalize;
 }
 
-.book {
+.book:link,
+.book:visited {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,9 +49,10 @@ h1 {
   font-size: 2.3rem;
   width: 26.3rem;
   height: 6rem;
+  color: #1c1e22;
+  text-decoration: none;
   margin-top: 9.6rem;
   transition: all ease-in-out 150ms;
-  color: #1c1e22;
   background-color: var(--white);
   border: none;
 }
@@ -65,4 +60,32 @@ h1 {
 .book:hover,
 .book:active {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+// Media Queries
+
+@media only screen and (max-width: 1299px) {
+  h1 {
+    font-size: 8.2rem;
+  }
+
+  .subheading {
+    font-size: 2.8rem;
+  }
+
+  .book {
+    font-size: 1.9rem;
+    height: 5rem;
+    width: 20rem;
+  }
+}
+
+@media only screen and (min-width: 2100px) {
+  .hero-section {
+    height: 120rem;
+  }
+
+  .hero-heading {
+    transform: translateY(13rem);
+  }
 }
