--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -27,3 +27,18 @@
   position: absolute;
   z-index: 2;
 }
+
+// Media Queries
+
+@media only screen and (min-width: 1700px) and (max-width: 2099px) {
+  .hero-divider {
+    transform: rotate(-4deg);
+  }
+}
+
+@media only screen and (min-width: 2100px) {
+  .hero-divider {
+    transform: rotate(-4deg);
+    top: -8rem;
+  }
+}
