Wrote responsive code for the makeup, sfx, art, and bridal pages

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -5,6 +5,11 @@ footer {
   padding: 0 25rem;
 }
 
+.footer-logo {
+  height: 15rem;
+  width: 15rem;
+}
+
 .firstCol ul,
 .secondCol ul,
 .thirdCol ul {
