--- a/src/App.scss
+++ b/src/App.scss
@@ -41,3 +41,71 @@ body {
   // overflow-y: hidden;
   // overflow-y:scroll;
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 299px) {
+  html:not(.homePage) {
+    font-size: 10%;
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  html:not(.homePage) {
+    font-size: 15%;
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 499px) {
+  html:not(.homePage) {
+    font-size: 20%;
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 599px) {
+  html:not(.homePage) {
+    font-size: 25%;
+  }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 699px) {
+  html:not(.homePage) {
+    font-size: 30%;
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 799px) {
+  html:not(.homePage) {
+    font-size: 35%;
+  }
+}
+
+@media only screen and (min-width: 800px) and (max-width: 899px) {
+  html:not(.homePage) {
+    font-size: 40%;
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 999px) {
+  html:not(.homePage) {
+    font-size: 45%;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1099px) {
+  html:not(.homePage) {
+    font-size: 50%;
+  }
+}
+
+@media only screen and (min-width: 1100px) and (max-width: 1199px) {
+  html:not(.homePage) {
+    font-size: 55%;
+  }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1299px) {
+  html:not(.homePage) {
+    font-size: 60%;
+  }
+}
