--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -1,10 +1,12 @@
 .bridalPage {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .bridal-container {
-  padding: 24.7rem 13rem 0;
-  margin-bottom: -35rem;
+  padding-top: 24.7rem;
+  // margin-bottom: -35rem;
 
   img {
     border-color: var(--white);
@@ -23,12 +25,7 @@
     object-position: center top;
   }
 
-  img:nth-child(11),
-  img:nth-child(12),
-  img:nth-child(13),
-  img:nth-child(14),
-  img:nth-child(15),
-  img:nth-child(16) {
-    display: none;
+  .gallery-container {
+    grid-template-rows: repeat(3, 1fr);
   }
 }
