Testing node modules fix

--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -35,6 +35,22 @@
   }
 }
 
+@media only screen and (max-width: 499px) {
+  .gallery-container {
+    grid-template-columns: 1fr 1fr;
+
+    :nth-child(3) {
+      grid-area: 4 / 1 / 6 / 2;
+    }
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 699px) {
+  .gallery-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 @media only screen and (max-width: 1299px) {
   .gallery-container {
     img {
