--- a/src/App.scss
+++ b/src/App.scss
@@ -58,29 +58,19 @@ body {
 
 @media only screen and (min-width: 400px) and (max-width: 499px) {
   html:not(.homePage) {
-    font-size: 20%;
-  }
-}
-
-@media only screen and (min-width: 500px) and (max-width: 599px) {
-  html:not(.homePage) {
-    font-size: 25%;
-  }
-}
-
-@media only screen and (min-width: 600px) and (max-width: 699px) {
-  html:not(.homePage) {
     font-size: 30%;
   }
 }
 
-@media only screen and (min-width: 700px) and (max-width: 799px) {
+@media only screen and (min-width: 500px) and (max-width: 599px),
+  (min-width: 700px) and (max-width: 799px) {
   html:not(.homePage) {
     font-size: 35%;
   }
 }
 
-@media only screen and (min-width: 800px) and (max-width: 899px) {
+@media only screen and (min-width: 600px) and (max-width: 699px),
+  (min-width: 800px) and (max-width: 899px) {
   html:not(.homePage) {
     font-size: 40%;
   }
