--- a/src/Views/BridalPage/BridalPage.scss
+++ b/src/Views/BridalPage/BridalPage.scss
@@ -29,3 +29,19 @@
     grid-template-rows: repeat(3, 1fr);
   }
 }
+
+@media only screen and (max-width: 499px) {
+  .bridal-container {
+    .gallery-container {
+      grid-template-rows: repeat(5, 1fr);
+    }
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 699px) {
+  .bridal-container {
+    .gallery-container {
+      grid-template-rows: repeat(4, 1fr);
+    }
+  }
+}
