--- a/src/Components/ServicesSection/ServicesSection.scss
+++ b/src/Components/ServicesSection/ServicesSection.scss
@@ -7,13 +7,25 @@
 .services-section {
   padding: 200px;
   padding-top: 0px;
+  @media (max-width: 924px) {
+    margin: 0 50px;
+  }
+  @media (max-width: 598px) {
+    padding: 0;
+    padding-bottom: 50px;
+  }
 }
 
-.servicesContainer {
+.services-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 50px;
+  @media (max-width: 598px) {
+    padding: 0;
+    margin: 0;
+    padding-top: 50px;
+  }
 }
 
 .copy {
@@ -24,25 +36,17 @@
   font-style: normal;
   padding: 50px;
   padding-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  // text-wrap: wrap;
+  @media (max-width: 924px) {
+    width: 500px;
+  }
+  @media (max-width: 598px) {
+    padding: 0;
+    padding-bottom: 50px;
+    margin: 0 15px;
+  }
 }
-
-// p {
-//   font-weight: 700;
-//   font-size: 28px;
-//   line-height: 55px;
-//   text-transform: uppercase;
-//   color: #686c7e;
-//   padding-bottom: 25px;
-// }
-
-// h2 {
-//   font-weight: 700;
-//   font-size: 48px;
-//   line-height: 60px;
-// }
-
-// h3 {
-//   font-weight: 400;
-//   font-size: 33px;
-//   line-height: 50px;
-// }
