--- a/src/Components/ReusableComponents/PageHeading.css
+++ b/src/Components/ReusableComponents/PageHeading.css
@@ -24,3 +24,11 @@
   line-height: 152%;
   font-weight: 400;
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 299px) {
+  .page-heading-container {
+    padding: 0 4.8rem;
+  }
+}
